--- a/HowCanDeepCanYouGo.ipynb
+++ b/HowCanDeepCanYouGo.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "81ef5eb1",
+   "id": "df19201c",
    "metadata": {},
    "source": [
-    "This notebook investigates how deep we can make a neural network. Naive approach of simply adding 10 hidden layers (DeepNaiveNet) behaves worse than the network from tutorial (NaiveNet) with one hidden layer added. This is probably due to vanishing gradients. Adding BatchNorm layers and Residual Connections (you can look it up on Wikipedia if you don't know or ask ChatGPT--> They are modern algorithms that make possible training very deep models such as Transformers) results in the DeepNet model that converges to 100% test accuracy with less than 1000 epochs, whereas it takes NaiveNet about 6000 epochs to converge to 100% test accuracy. "
+    "This notebook investigates how deep we can make a neural network. Naive approach of simply adding 10 hidden layers (DeepNaiveNet) behaves worse (it has terrible performance in fact) than the network from tutorial (NaiveNet) with one hidden layer added. This is probably due to vanishing gradients. Adding BatchNorm layers and Residual Connections (you can look it up on Wikipedia if you don't know or ask ChatGPT--> They are modern algorithms that make possible training very deep models such as Transformers) results in the DeepNet model that converges to 100% test accuracy with less than 1000 epochs, whereas it takes NaiveNet about 6000 epochs to converge to 100% test accuracy. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c7da6dc4",
+   "id": "d6f7c94f",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "acb48523",
+   "id": "97e6e3ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fbd23faf",
+   "id": "d7501e93",
    "metadata": {
     "scrolled": true
    },
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5030a73b",
+   "id": "c043ab6e",
    "metadata": {
     "scrolled": false
    },
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5eaa6983",
+   "id": "db500362",
    "metadata": {},
    "outputs": [
     {
