--- a/neurogym.ipynb
+++ b/neurogym.ipynb
@@ -367,10 +367,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "1dc1ca51",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode 10, Reward: 0.6\n"
+     ]
+    },
+    {
+     "ename": "ResetNeeded",
+     "evalue": "Cannot call env.step() before calling env.reset()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mResetNeeded\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[60], line 187\u001b[0m\n\u001b[1;32m    185\u001b[0m action, _, _ \u001b[38;5;241m=\u001b[39m policy\u001b[38;5;241m.\u001b[39mact(state)\n\u001b[1;32m    186\u001b[0m action \u001b[38;5;241m=\u001b[39m action\u001b[38;5;241m.\u001b[39mitem()  \u001b[38;5;66;03m# Convert action tensor to scalar\u001b[39;00m\n\u001b[0;32m--> 187\u001b[0m next_state, reward, done, _ \u001b[38;5;241m=\u001b[39m \u001b[43menv\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstep\u001b[49m\u001b[43m(\u001b[49m\u001b[43maction\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    188\u001b[0m next_state \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mFloatTensor(next_state)\u001b[38;5;241m.\u001b[39mto(agent\u001b[38;5;241m.\u001b[39mdevice)\u001b[38;5;241m.\u001b[39munsqueeze(\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m    189\u001b[0m \u001b[38;5;66;03m#env.render()\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[60], line 35\u001b[0m, in \u001b[0;36mMultiTaskEnv.step\u001b[0;34m(self, action)\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     34\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcurrent_task \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtask2\n\u001b[0;32m---> 35\u001b[0m obs, reward, done, info \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcurrent_task\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstep\u001b[49m\u001b[43m(\u001b[49m\u001b[43maction\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     36\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m done:\n\u001b[1;32m     37\u001b[0m     obs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcurrent_task\u001b[38;5;241m.\u001b[39mreset()\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.9/site-packages/gym/wrappers/order_enforcing.py:36\u001b[0m, in \u001b[0;36mOrderEnforcing.step\u001b[0;34m(self, action)\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Steps through the environment with `kwargs`.\"\"\"\u001b[39;00m\n\u001b[1;32m     35\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_has_reset:\n\u001b[0;32m---> 36\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m ResetNeeded(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCannot call env.step() before calling env.reset()\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     37\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39menv\u001b[38;5;241m.\u001b[39mstep(action)\n",
+      "\u001b[0;31mResetNeeded\u001b[0m: Cannot call env.step() before calling env.reset()"
+     ]
+    }
+   ],
    "source": [
     "import gym\n",
     "import neurogym as ngym\n",
@@ -503,20 +524,20 @@
     "\n",
     "\n",
     "# Training loop\n",
-    "def train(env, agent, num_episodes=1000, batch_size=32):\n",
+    "def train(env, agent, num_episodes=10, batch_size=32):\n",
     "    memory = deque(maxlen=batch_size)\n",
     "    episode_rewards = []\n",
     "\n",
     "    for episode in range(num_episodes):\n",
     "        state = env.reset()\n",
+    "        env.reset()\n",
     "        state = torch.FloatTensor(state).to(agent.device).unsqueeze(0)\n",
     "        episode_reward = 0\n",
     "\n",
-    "        for t in range(1, 10000):\n",
-    "            env.reset()\n",
+    "        for t in range(1, 100):\n",
     "            action, log_prob, value = agent.policy.act(state)\n",
     "            action = action.item()  # Convert action tensor to scalar\n",
-    "            next_state, reward, done, _ = env.step(0)\n",
+    "            next_state, reward, done, _ = env.step(action)\n",
     "            next_state = torch.FloatTensor(next_state).to(agent.device).unsqueeze(0)\n",
     "\n",
     "            memory.append((state, action, log_prob.item(), reward, 1 - int(done), value))\n",
@@ -558,9 +579,9 @@
     "for _ in range(1000):\n",
     "    action, _, _ = policy.act(state)\n",
     "    action = action.item()  # Convert action tensor to scalar\n",
-    "    next_state, reward, done, _ = env.step(0)\n",
+    "    next_state, reward, done, _ = env.step(action)\n",
     "    next_state = torch.FloatTensor(next_state).to(agent.device).unsqueeze(0)\n",
-    "    env.render()\n",
+    "    #env.render()\n",
     "    state = next_state\n",
     "    if done:\n",
     "        state = env.reset()\n",
