--- a/neurogym.ipynb
+++ b/neurogym.ipynb
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 68,
    "id": "1dc1ca51",
    "metadata": {},
    "outputs": [
@@ -375,7 +375,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode 10, Reward: 0\n"
+      "Episode 10, Reward: 1.9\n"
      ]
     },
     {
@@ -385,8 +385,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[67], line 190\u001b[0m\n\u001b[1;32m    188\u001b[0m action, _, _ \u001b[38;5;241m=\u001b[39m policy\u001b[38;5;241m.\u001b[39mact(state)\n\u001b[1;32m    189\u001b[0m action \u001b[38;5;241m=\u001b[39m action\u001b[38;5;241m.\u001b[39mitem()  \u001b[38;5;66;03m# Convert action tensor to scalar\u001b[39;00m\n\u001b[0;32m--> 190\u001b[0m next_state, reward, done, _ \u001b[38;5;241m=\u001b[39m \u001b[43menv\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstep\u001b[49m\u001b[43m(\u001b[49m\u001b[43maction\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    191\u001b[0m next_state \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mFloatTensor(next_state)\u001b[38;5;241m.\u001b[39mto(agent\u001b[38;5;241m.\u001b[39mdevice)\u001b[38;5;241m.\u001b[39munsqueeze(\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m    192\u001b[0m \u001b[38;5;66;03m#env.render()\u001b[39;00m\n",
-      "Cell \u001b[0;32mIn[67], line 37\u001b[0m, in \u001b[0;36mMultiTaskEnv.step\u001b[0;34m(self, action)\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     36\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcurrent_task \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtask2\n\u001b[0;32m---> 37\u001b[0m obs, reward, done, info \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcurrent_task\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstep\u001b[49m\u001b[43m(\u001b[49m\u001b[43maction\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     38\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m done:\n\u001b[1;32m     39\u001b[0m     obs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcurrent_task\u001b[38;5;241m.\u001b[39mreset()\n",
+      "Cell \u001b[0;32mIn[68], line 190\u001b[0m\n\u001b[1;32m    188\u001b[0m action, _, _ \u001b[38;5;241m=\u001b[39m policy\u001b[38;5;241m.\u001b[39mact(state)\n\u001b[1;32m    189\u001b[0m action \u001b[38;5;241m=\u001b[39m action\u001b[38;5;241m.\u001b[39mitem()  \u001b[38;5;66;03m# Convert action tensor to scalar\u001b[39;00m\n\u001b[0;32m--> 190\u001b[0m next_state, reward, done, _ \u001b[38;5;241m=\u001b[39m \u001b[43menv\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstep\u001b[49m\u001b[43m(\u001b[49m\u001b[43maction\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    191\u001b[0m next_state \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mFloatTensor(next_state)\u001b[38;5;241m.\u001b[39mto(agent\u001b[38;5;241m.\u001b[39mdevice)\u001b[38;5;241m.\u001b[39munsqueeze(\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m    192\u001b[0m \u001b[38;5;66;03m#env.render()\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[68], line 37\u001b[0m, in \u001b[0;36mMultiTaskEnv.step\u001b[0;34m(self, action)\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     36\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcurrent_task \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtask2\n\u001b[0;32m---> 37\u001b[0m obs, reward, done, info \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcurrent_task\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstep\u001b[49m\u001b[43m(\u001b[49m\u001b[43maction\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     38\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m done:\n\u001b[1;32m     39\u001b[0m     obs \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcurrent_task\u001b[38;5;241m.\u001b[39mreset()\n",
       "File \u001b[0;32m~/anaconda3/lib/python3.9/site-packages/gym/wrappers/order_enforcing.py:37\u001b[0m, in \u001b[0;36mOrderEnforcing.step\u001b[0;34m(self, action)\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_has_reset:\n\u001b[1;32m     36\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m ResetNeeded(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCannot call env.step() before calling env.reset()\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 37\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43menv\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstep\u001b[49m\u001b[43m(\u001b[49m\u001b[43maction\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m~/Neuromatch2024/neurogym/neurogym/core.py:188\u001b[0m, in \u001b[0;36mstep\u001b[0;34m(self, action)\u001b[0m\n",
       "File \u001b[0;32m~/Neuromatch2024/neurogym/neurogym/envs/reachingdelayresponse.py:83\u001b[0m, in \u001b[0;36m_step\u001b[0;34m(self, action)\u001b[0m\n",
@@ -539,7 +539,7 @@
     "        episode_reward = 0\n",
     "\n",
     "        for t in range(1, 100):\n",
-    "            env.reset()\n",
+    "            #env.reset()\n",
     "            action, log_prob, value = agent.policy.act(state)\n",
     "            action = action.item()  # Convert action tensor to scalar\n",
     "            next_state, reward, done, _ = env.step(action)\n",
