--- a/neurogym.ipynb
+++ b/neurogym.ipynb
@@ -172,8 +172,8 @@
     "! git clone https://github.com/gyyang/neurogym.git\n",
     "%cd neurogym/\n",
     "! pip install -e .\n",
-    "!pip install shimmy>=0.2.1\n",
-    "!pip install stable-baselines3\n",
+    "#!pip install shimmy>=0.2.1\n",
+    "#!pip install stable-baselines3\n",
     "!pip install torchrl"
    ]
   },
