--- a/neurogym.ipynb
+++ b/neurogym.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 93,
    "id": "1dc1ca51",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode 10, Reward: 2.6999999999999997\n"
+      "Episode 10, Reward: 2.6\n"
      ]
     }
    ],
@@ -419,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
