--- a/qlearning_frozenlake.ipynb
+++ b/qlearning_frozenlake.ipynb
@@ -34,31 +34,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{(0, 0): 0.0, (0, 1): 0.0, (0, 2): 0.0, (0, 3): 0.0, (1, 0): 0, (1, 1): 0.0, (1, 2): 0, (1, 3): 0, (2, 0): 0, (2, 1): 0, (2, 2): 0, (2, 3): 0, (3, 0): 0, (3, 1): 0, (3, 2): 0, (3, 3): 0, (4, 0): 0.0, (4, 1): 0, (4, 2): 0.0, (4, 3): 0.0, (5, 0): 0, (5, 1): 0, (5, 2): 0, (5, 3): 0, (6, 0): 0, (6, 1): 0, (6, 2): 0, (6, 3): 0, (7, 0): 0, (7, 1): 0, (7, 2): 0, (7, 3): 0, (8, 0): 0, (8, 1): 0, (8, 2): 0, (8, 3): 0, (9, 0): 0, (9, 1): 0, (9, 2): 0, (9, 3): 0, (10, 0): 0, (10, 1): 0, (10, 2): 0, (10, 3): 0, (11, 0): 0, (11, 1): 0, (11, 2): 0, (11, 3): 0, (12, 0): 0, (12, 1): 0, (12, 2): 0, (12, 3): 0, (13, 0): 0, (13, 1): 0, (13, 2): 0, (13, 3): 0, (14, 0): 0, (14, 1): 0, (14, 2): 0, (14, 3): 0, (15, 0): 0, (15, 1): 0, (15, 2): 0, (15, 3): 0}\n"
+      "{(0, 0): 0.5314275733489845, (0, 1): 0.5904899999997402, (0, 2): 0.4781174946200239, (0, 3): 0.5314286714323224, (1, 0): 0.5314227471323519, (1, 1): 0.0, (1, 2): 0.02230779810453289, (1, 3): 0.1250973156618463, (2, 0): 0.18157031906607565, (2, 1): 0.01098609352469124, (2, 2): 1.402872263834947e-06, (2, 3): 0.0011662018590399765, (3, 0): 0.000726102759814892, (3, 1): 0.0, (3, 2): 1.7215660428138127e-09, (3, 3): 0.0, (4, 0): 0.5904684489563743, (4, 1): 0.656099999999773, (4, 2): 0.0, (4, 3): 0.5314268088133346, (5, 0): 0, (5, 1): 0, (5, 2): 0, (5, 3): 0, (6, 0): 0.0, (6, 1): 0.8098345956293571, (6, 2): 0.0, (6, 3): 0.017924931889547375, (7, 0): 0, (7, 1): 0, (7, 2): 0, (7, 3): 0, (8, 0): 0.6560713423042682, (8, 1): 0.0, (8, 2): 0.7289999999998094, (8, 3): 0.5904645924875154, (9, 0): 0.6560481079239304, (9, 1): 0.8098731374467368, (9, 2): 0.8099999999998497, (9, 3): 0.0, (10, 0): 0.7289378265156317, (10, 1): 0.8999999999998947, (10, 2): 0.0, (10, 3): 0.727938078933294, (11, 0): 0, (11, 1): 0, (11, 2): 0, (11, 3): 0, (12, 0): 0, (12, 1): 0, (12, 2): 0, (12, 3): 0, (13, 0): 0.0, (13, 1): 0.27784886751409443, (13, 2): 0.8999999860021278, (13, 3): 0.2804477799547959, (14, 0): 0.8098666568158318, (14, 1): 0.8999172761252362, (14, 2): 0.9999999999999445, (14, 3): 0.8099209322731967, (15, 0): 0, (15, 1): 0, (15, 2): 0, (15, 3): 0}\n"
      ]
     }
    ],
    "source": [
-    "n_episodes=1\n",
+    "import numpy as np\n",
+    "\n",
+    "n_episodes=500000\n",
     "alpha=0.001\n",
     "gamma=0.9\n",
     "epsilon=0.1\n",
+    "\n",
+    "def epsilon_greedy_policy(state, epsilon):\n",
+    "    if np.random.rand() < epsilon:\n",
+    "        return env.action_space.sample()  # Choose a random action\n",
+    "    else:\n",
+    "        return max(actions, key=lambda a: q_table[(state, a)])  # Choose the action with the highest Q-value\n",
+    "\n",
     "for i in range(n_episodes):\n",
-    "    state=env.reset()[0]\n",
-    "    done=False\n",
+    "    state, info = env.reset()  # Reset the environment\n",
+    "    done = False\n",
     "    while not done:\n",
-    "        action=env.action_space.sample()\n",
-    "        next_state, reward, done, info, prob = env.step(action)\n",
-    "        q_table[(state,action)]+=alpha*(reward+gamma*max([q_table[(next_state,a)] for a in actions])-q_table[(state,action)]\n",
-    "        state=next_state\n",
+    "        action = epsilon_greedy_policy(state, epsilon)  # Choose action based on epsilon-greedy policy\n",
+    "        next_state, reward, done, truncated, info = env.step(action)  # Take the action\n",
+    "\n",
+    "        # Update Q-table using the Q-learning formula\n",
+    "        best_next_action = max(actions, key=lambda a: q_table[(next_state, a)])\n",
+    "        td_target = reward + gamma * q_table[(next_state, best_next_action)]\n",
+    "        td_error = td_target - q_table[(state, action)]\n",
+    "        q_table[(state, action)] += alpha * td_error\n",
+    "\n",
+    "        # Move to the next state\n",
+    "        state = next_state\n",
     "print(q_table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Define Agent with a class\n",
+    "\n",
+    "class Agent:\n",
+    "    def __init__(self):\n",
+    "        self.n_episodes=500000\n",
+    "        self.alpha=0.001\n",
+    "        self.gamma=0.9\n",
+    "        self.epsilon=0.1\n",
+    "\n",
+    "        self.Q=self.initialize_Q()\n",
+    "\n",
+    "    def initialize_Q(self):\n",
+    "        q_table={}\n",
+    "        for s in states:\n",
+    "            for a in actions:\n",
+    "                state_action=(s,a)\n",
+    "                q_table[state_action]=0\n",
+    "        return q_table\n",
+    "    \n",
+    "    def policy(self, state):\n",
+    "        if np.random.rand() < self.epsilon:\n",
+    "            return env.action_space.sample()  # Choose a random action\n",
+    "        else:\n",
+    "            return max(actions, key=lambda a: self.Q[(state, a)])  # Choose the action with the highest Q-value\n",
+    "\n",
+    "agent=Agent()\n",
+    "\n",
+    "for i in range(n_episodes):\n",
+    "    state, info = env.reset()  # Reset the environment\n",
+    "    done = False\n",
+    "    while not done:\n",
+    "        action = agent.policy(state)  # Choose action based on epsilon-greedy policy\n",
+    "        next_state, reward, done, truncated, info = env.step(action)  # Take the action\n",
+    "\n",
+    "        # Update Q-table using the Q-learning formula\n",
+    "        best_next_action = max(actions, key=lambda a: agent.Q[(next_state, a)])\n",
+    "        td_target = reward + gamma * agent.Q[(next_state, best_next_action)]\n",
+    "        td_error = td_target - agent.Q[(state, action)]\n",
+    "        agent.Q[(state, action)] += alpha * td_error\n",
+    "\n",
+    "        # Move to the next state\n",
+    "        state = next_state\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "class Agent:\n",
+    "    def __init__(self, states, actions, env):\n",
+    "        self.n_episodes = 500000\n",
+    "        self.alpha = 0.001\n",
+    "        self.gamma = 0.9\n",
+    "        self.epsilon = 0.1\n",
+    "        self.states = states\n",
+    "        self.actions = actions\n",
+    "        self.env = env\n",
+    "\n",
+    "        self.Q = self.initialize_Q()\n",
+    "\n",
+    "    def initialize_Q(self):\n",
+    "        q_table = {}\n",
+    "        for s in self.states:\n",
+    "            for a in self.actions:\n",
+    "                state_action = (s, a)\n",
+    "                q_table[state_action] = 0\n",
+    "        return q_table\n",
+    "    \n",
+    "    def policy(self, state):\n",
+    "        if np.random.rand() < self.epsilon:\n",
+    "            return self.env.action_space.sample()  # Choose a random action\n",
+    "        else:\n",
+    "            return max(self.actions, key=lambda a: self.Q[(state, a)])  # Choose the action with the highest Q-value\n",
+    "\n",
+    "# Assuming env, states, and actions are defined somewhere in the code\n",
+    "# env = ... (initialize your environment)\n",
+    "# states = ... (define your state space)\n",
+    "# actions = ... (define your action space)\n",
+    "# agent = Agent(states, actions, env)\n",
+    "\n",
+    "agent = Agent(states, actions, env)\n",
+    "\n",
+    "for i in range(agent.n_episodes):\n",
+    "    state, info = agent.env.reset()  # Reset the environment\n",
+    "    done = False\n",
+    "    while not done:\n",
+    "        action = agent.policy(state)  # Choose action based on epsilon-greedy policy\n",
+    "        next_state, reward, done, truncated, info = agent.env.step(action)  # Take the action\n",
+    "\n",
+    "        # Update Q-table using the Q-learning formula\n",
+    "        best_next_action = max(agent.actions, key=lambda a: agent.Q[(next_state, a)])\n",
+    "        td_target = reward + agent.gamma * agent.Q[(next_state, best_next_action)]\n",
+    "        td_error = td_target - agent.Q[(state, action)]\n",
+    "        agent.Q[(state, action)] += agent.alpha * td_error\n",
+    "\n",
+    "        # Move to the next state\n",
+    "        state = next_state\n"
    ]
   }
  ],
