--- a/continuous_state_spaces.ipynb
+++ b/continuous_state_spaces.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(0)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from torch import nn \n",
     "from torch.functional import F\n",
@@ -45,16 +34,20 @@
     "        return self.layer3(x)\n",
     "\n",
     "class Agent():\n",
-    "    def __init__(self, lr, gamma, n_states, n_actions, eps_start, eps_end, eps_dec):\n",
+    "    def __init__(self, env, lr, gamma, eps_start, eps_end, eps_dec):\n",
     "        self.lr=lr\n",
     "        self.gamma=gamma\n",
-    "        self.n_states=n_states\n",
-    "        self.n_actions=n_actions\n",
+    "        #self.n_states=n_states\n",
+    "        #self.n_actions=n_actions\n",
     "        self.epsilon=eps_start\n",
     "        self.eps_min=eps_end\n",
     "        self.eps_dec=eps_dec\n",
+    "        self.env=env\n",
+    "        self.num_states = self.env.observation_space.n\n",
+    "        self.num_actions = self.env.action_space.n\n",
     "\n",
-    "        self.Q=DQN(self.n_states, self.n_actions)\n",
+    "        self.Q=DQN(1, self.num_actions)\n",
+    "\n",
     "\n",
     "    def choose_action(self, state):\n",
     "        if np.random.random() > self.epsilon:\n",
@@ -63,13 +56,80 @@
     "            action=torch.argmax(actions).item()\n",
     "        else:\n",
     "            action=torch.tensor(np.random.choice(\n",
-    "                [i for i in range(self.n_actions) ]))\n",
+    "                [i for i in range(self.num_actions) ])).item()\n",
     "        return action\n",
+    "    \n",
+    "    def decrement_epsilon(self):\n",
+    "        self.epsilon=self.epsilon-self.eps_dec if self.epsilon > self.eps_min else self.eps_min\n",
+    "\n",
+    "    def learn(self, state, action, reward, state_):\n",
+    "        self.Q.optimizer.zero_grad()\n",
+    "        states = torch.tensor([state], dtype=torch.float).to(device)\n",
+    "        actions = torch.tensor([action]).to(device)\n",
+    "        rewards = torch.tensor([reward]).to(device)\n",
+    "        states_ = torch.tensor([state_], dtype=torch.float).to(device)\n",
+    "\n",
+    "        q_pred = self.Q.forward(states)[actions]\n",
+    "        q_next = self.Q.forward(states_).max()\n",
+    "        q_target = rewards + self.gamma*q_next\n",
+    "\n",
+    "        loss = self.Q.loss(q_target, q_pred).to(device)\n",
+    "        loss.backward()\n",
+    "        self.Q.optimizer.step()\n",
+    "        self.decrement_epsilon()\n",
     "    \n",
     "#DQN(4, 2)#(torch.rand(1, 4).to('cuda'))\n",
     "\n",
-    "agent=Agent(0.001, 0.99, 4, 2, 1.0, 0.01, 0.001)\n",
-    "agent.choose_action([1, 2, 3, 4])"
+    "#agent=Agent(0.001, 0.99, 4, 2, 1.0, 0.01, 0.001)\n",
+    "#agent.choose_action([1, 2, 3, 4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "episode 0 win pct 0.00 epsilon 1.00\n",
+      "episode 100 win pct 0.01 epsilon 0.01\n"
+     ]
+    }
+   ],
+   "source": [
+    "import gymnasium as gym\n",
+    "\n",
+    "# Create the environment\n",
+    "env = gym.make('FrozenLake-v1', desc=None, map_name=\"4x4\", is_slippery=False)\n",
+    "\n",
+    "agent=Agent(env, 0.001, 0.99, 1.0, 0.01, 0.001)\n",
+    "\n",
+    "n_episodes = 2500\n",
+    "# Training loop\n",
+    "win_pct_list=[]\n",
+    "scores= []\n",
+    "for i in range(n_episodes):\n",
+    "    state, info = agent.env.reset()  # Reset the environment\n",
+    "    done = False\n",
+    "    score=0\n",
+    "    while not done:\n",
+    "        action = agent.choose_action(state) # Choose action based on epsilon-greedy policy\n",
+    "        next_state, reward, done, truncated, info = agent.env.step(action)  # Take the action\n",
+    "        #print('boom',next_state)\n",
+    "        agent.learn(state, action, reward, next_state)  # Update Q-table\n",
+    "        state = next_state  # Move to the next state\n",
+    "        score+=reward\n",
+    "    scores.append(score)\n",
+    "    if i%100==0:\n",
+    "        avg_score=np.mean(scores[-100:])\n",
+    "        win_pct_list.append(avg_score)\n",
+    "        print('episode', i, 'win pct %.2f' % avg_score, 'epsilon %.2f' % agent.epsilon)\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.plot(win_pct_list)\n",
+    "plt.show()\n"
    ]
   }
  ],
