--- a/qlearning_frozenlake.ipynb
+++ b/qlearning_frozenlake.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,18 +130,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(0, 0): 0.5314392145061345,\n",
+       " (0, 1): 0.5904899999997402,\n",
+       " (0, 2): 0.47827504715295,\n",
+       " (0, 3): 0.5314388285971072,\n",
+       " (1, 0): 0.5314393646874062,\n",
+       " (1, 1): 0.0,\n",
+       " (1, 2): 0.03969325267678681,\n",
+       " (1, 3): 0.12892239582009796,\n",
+       " (2, 0): 0.26475526623932233,\n",
+       " (2, 1): 0.0004287094707732018,\n",
+       " (2, 2): 2.1015545482040462e-05,\n",
+       " (2, 3): 0.00315122235198043,\n",
+       " (3, 0): 0.0030700235656551554,\n",
+       " (3, 1): 0.0,\n",
+       " (3, 2): 0.0,\n",
+       " (3, 3): 4.7457652409869347e-07,\n",
+       " (4, 0): 0.5904874747919534,\n",
+       " (4, 1): 0.656099999999773,\n",
+       " (4, 2): 0.0,\n",
+       " (4, 3): 0.5314379856722823,\n",
+       " (5, 0): 0,\n",
+       " (5, 1): 0,\n",
+       " (5, 2): 0,\n",
+       " (5, 3): 0,\n",
+       " (6, 0): 0.0,\n",
+       " (6, 1): 0.00563260906533824,\n",
+       " (6, 2): 0.0,\n",
+       " (6, 3): 0.057612314479970804,\n",
+       " (7, 0): 0,\n",
+       " (7, 1): 0,\n",
+       " (7, 2): 0,\n",
+       " (7, 3): 0,\n",
+       " (8, 0): 0.6560962104787632,\n",
+       " (8, 1): 0.0,\n",
+       " (8, 2): 0.7289999999998094,\n",
+       " (8, 3): 0.5904862616476257,\n",
+       " (9, 0): 0.6560923286584399,\n",
+       " (9, 1): 0.8099999999998497,\n",
+       " (9, 2): 0.8099813370563325,\n",
+       " (9, 3): 0.0,\n",
+       " (10, 0): 0.3250728220719683,\n",
+       " (10, 1): 0.8999999992410108,\n",
+       " (10, 2): 0.0,\n",
+       " (10, 3): 0.00869555294986949,\n",
+       " (11, 0): 0,\n",
+       " (11, 1): 0,\n",
+       " (11, 2): 0,\n",
+       " (11, 3): 0,\n",
+       " (12, 0): 0,\n",
+       " (12, 1): 0,\n",
+       " (12, 2): 0,\n",
+       " (12, 3): 0,\n",
+       " (13, 0): 0.0,\n",
+       " (13, 1): 0.8099887413247179,\n",
+       " (13, 2): 0.8999999999998947,\n",
+       " (13, 3): 0.7289881259681208,\n",
+       " (14, 0): 0.8099894966724334,\n",
+       " (14, 1): 0.8999879621938778,\n",
+       " (14, 2): 0.9999999999999445,\n",
+       " (14, 3): 0.8099755292103189,\n",
+       " (15, 0): 0,\n",
+       " (15, 1): 0,\n",
+       " (15, 2): 0,\n",
+       " (15, 3): 0}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agent.Q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{(0, 0): 0.5314402897395228, (0, 1): 0.5904899999997402, (0, 2): 0.478288510035874, (0, 3): 0.5314403706157601, (1, 0): 0.5314403415034907, (1, 1): 0.0, (1, 2): 0.03606471311478349, (1, 3): 0.12661986274925974, (2, 0): 0.22285433560411422, (2, 1): 0.012761604086346247, (2, 2): 7.476791909082743e-06, (2, 3): 0.0009847170127300778, (3, 0): 0.0016693907557080376, (3, 1): 0, (3, 2): 0.0, (3, 3): 0, (4, 0): 0.5904888706929866, (4, 1): 0.656099999999773, (4, 2): 0.0, (4, 3): 0.5314399785831091, (5, 0): 0, (5, 1): 0, (5, 2): 0, (5, 3): 0, (6, 0): 0.0, (6, 1): 0.8099865039374767, (6, 2): 0.0, (6, 3): 0.028207056984590643, (7, 0): 0, (7, 1): 0, (7, 2): 0, (7, 3): 0, (8, 0): 0.6560985661005658, (8, 1): 0.0, (8, 2): 0.7289999999998094, (8, 3): 0.5904884809673764, (9, 0): 0.656097684859496, (9, 1): 0.809992056248209, (9, 2): 0.8099999999998497, (9, 3): 0.0, (10, 0): 0.7289945804615781, (10, 1): 0.8999999999998947, (10, 2): 0.0, (10, 3): 0.7288986748134271, (11, 0): 0, (11, 1): 0, (11, 2): 0, (11, 3): 0, (12, 0): 0, (12, 1): 0, (12, 2): 0, (12, 3): 0, (13, 0): 0.0, (13, 1): 0.3532615260597148, (13, 2): 0.8999999998952208, (13, 3): 0.3342641354946194, (14, 0): 0.8099874905144637, (14, 1): 0.8999941351406843, (14, 2): 0.9999999999999445, (14, 3): 0.8099947481170983, (15, 0): 0, (15, 1): 0, (15, 2): 0, (15, 3): 0}\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
     "class Agent:\n",
-    "    def __init__(self, states, actions, env):\n",
-    "        self.n_episodes = 500000\n",
-    "        self.alpha = 0.001\n",
-    "        self.gamma = 0.9\n",
-    "        self.epsilon = 0.1\n",
+    "    def __init__(self, states, actions, env, alpha=0.001, gamma=0.9, epsilon=0.1):\n",
+    "        self.alpha = alpha\n",
+    "        self.gamma = gamma\n",
+    "        self.epsilon = epsilon\n",
     "        self.states = states\n",
     "        self.actions = actions\n",
     "        self.env = env\n",
@@ -161,30 +251,32 @@
     "            return self.env.action_space.sample()  # Choose a random action\n",
     "        else:\n",
     "            return max(self.actions, key=lambda a: self.Q[(state, a)])  # Choose the action with the highest Q-value\n",
+    "    \n",
+    "    def update_Q(self, state, action, reward, next_state):\n",
+    "        best_next_action = max(self.actions, key=lambda a: self.Q[(next_state, a)])\n",
+    "        td_target = reward + self.gamma * self.Q[(next_state, best_next_action)]\n",
+    "        td_error = td_target - self.Q[(state, action)]\n",
+    "        self.Q[(state, action)] += self.alpha * td_error\n",
     "\n",
-    "# Assuming env, states, and actions are defined somewhere in the code\n",
+    "# Initialize your environment, states, and actions\n",
     "# env = ... (initialize your environment)\n",
     "# states = ... (define your state space)\n",
     "# actions = ... (define your action space)\n",
-    "# agent = Agent(states, actions, env)\n",
     "\n",
+    "# Create an agent instance\n",
     "agent = Agent(states, actions, env)\n",
     "\n",
-    "for i in range(agent.n_episodes):\n",
+    "n_episodes = 500000\n",
+    "# Training loop\n",
+    "for i in range(n_episodes):\n",
     "    state, info = agent.env.reset()  # Reset the environment\n",
     "    done = False\n",
     "    while not done:\n",
     "        action = agent.policy(state)  # Choose action based on epsilon-greedy policy\n",
     "        next_state, reward, done, truncated, info = agent.env.step(action)  # Take the action\n",
-    "\n",
-    "        # Update Q-table using the Q-learning formula\n",
-    "        best_next_action = max(agent.actions, key=lambda a: agent.Q[(next_state, a)])\n",
-    "        td_target = reward + agent.gamma * agent.Q[(next_state, best_next_action)]\n",
-    "        td_error = td_target - agent.Q[(state, action)]\n",
-    "        agent.Q[(state, action)] += agent.alpha * td_error\n",
-    "\n",
-    "        # Move to the next state\n",
-    "        state = next_state\n"
+    "        agent.update_Q(state, action, reward, next_state)  # Update Q-table\n",
+    "        state = next_state  # Move to the next state\n",
+    "print(agent.Q)\n"
    ]
   }
  ],
