--- a/gpt2.ipynb
+++ b/gpt2.ipynb
@@ -284,19 +284,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted Q-Values: tensor([[ 0.1272, -0.4967,  0.1817,  0.1143,  0.0266,  0.3903,  0.0356, -0.1238,\n",
-      "          0.3397, -0.0706, -0.0573,  0.1797, -0.2115, -0.5405,  0.0265, -0.5560],\n",
-      "        [ 0.2494, -0.4945,  0.1613, -0.0409, -0.3726,  0.3152,  0.0202, -0.3718,\n",
-      "          0.2197, -0.0639,  0.1546,  0.0568, -0.0390, -0.7623, -0.4896, -0.4436]],\n",
+      "Predicted Q-Values: tensor([[-0.1745, -0.1387, -0.4710, -0.6407,  0.6866,  0.2279, -0.6004, -0.0904,\n",
+      "          0.0545, -0.1853, -0.2030,  0.1168, -0.2751, -0.4309, -0.2366,  0.6060],\n",
+      "        [-0.2210,  0.0886, -0.0525, -0.4536,  0.4082,  0.2409, -0.5375,  0.0720,\n",
+      "          0.1979,  0.0010, -0.2884,  0.0089, -0.0032, -0.0965,  0.1868,  0.0710]],\n",
       "       grad_fn=<AddmmBackward0>)\n",
-      "MSE Loss: tensor(0.7965, grad_fn=<MseLossBackward0>)\n"
+      "MSE Loss: tensor(1.2408, grad_fn=<MseLossBackward0>)\n"
      ]
     }
    ],
@@ -336,7 +336,7 @@
     "    def forward(self, x):\n",
     "        x = self.embedding(x)\n",
     "        x = self.attention(x)\n",
-    "        q_values = self.output_layer(x.squeeze(1))  # Assuming batch size 1 for simplicity\n",
+    "        q_values = self.output_layer(x)  # Assuming batch size 1 for simplicity\n",
     "        \n",
     "        return q_values\n",
     "\n",
